[WIP][T6268]generic method to generate queue job description and export particular task

--- a/connector_clickup/static/src/README.html
+++ b/connector_clickup/static/src/README.html
@@ -64,6 +64,10 @@
     Now User need to just click on Generate Token button which will set the new
     access_token in API Key field at clickup backend level.
   </li>
+  <li>
+    All the credential fields for API key authentication and OAuth 2.0 authentication
+    are available for Production mode and Test Mode.
+  </li>
 </ul>
 <h2 id="features-highlights"><strong>Features &amp; Highlights</strong></h2>
 <p>
