[WIP][T6268]Use childmapping for assignees mapping in project_task

--- a/connector_clickup/static/src/README.html
+++ b/connector_clickup/static/src/README.html
@@ -209,8 +209,9 @@
     whole space level in clickup website.
   </li>
   <li>
-    Currently we need to provide the team id in backend that helps to open particular
-    project at clickup website.
+    Currently we set the team id in backend automatically that helps to open particular
+    project at clickup website, If team ids are more then one it will be stored as comma
+    seperated values.
   </li>
   <li>
     Currently if we dont choose folder to export particular project,by default it will
