--- a/connector_clickup/static/src/README.html
+++ b/connector_clickup/static/src/README.html
@@ -76,6 +76,22 @@
     authentication are available for Production mode as well as Test mode.
   </li>
 </ul>
+<p><strong>Other Configuration:</strong></p>
+<ul>
+  <li>
+    To correctly import or export the project and tasks we should select one
+    workspace(team) at the time of generation authentication code if authentication type
+    is Oauth authentication or provide one workspace id(team) if auth type is API key.
+  </li>
+  <li>
+    We can import projects and tasks from more than one space(URI/Test location). At the
+    time of export if folder id is no provided it will be exported to first space id.
+  </li>
+  <li>
+    Creating different backend for workspaces(team) and location(space id) is
+    recommended.
+  </li>
+</ul>
 <h2 id="features-highlights"><strong>Features &amp; Highlights</strong></h2>
 <p>
   <strong>The Connector Clickup module offers the following functionalities:</strong>
@@ -209,9 +225,9 @@
     whole space level in clickup website.
   </li>
   <li>
-    Currently we set the team id in backend automatically that helps to open particular
-    project at clickup website, If team ids are more then one it will be stored as comma
-    seperated values.
+    Currently we set the team id in backend automatically in Oauth 2.0 authentication
+    that helps to open particular project at clickup website, If team ids are more then
+    one it will be stored as comma seperated values.
   </li>
   <li>
     Currently if we dont choose folder to export particular project,by default it will
