[WIP][T6268]Readme and misc changes

--- a/connector_clickup/static/src/README.html
+++ b/connector_clickup/static/src/README.html
@@ -156,7 +156,7 @@
 <p><strong>Task-Level Operations:</strong></p>
 <ul>
   <li>
-    Import Changes in individual tasks from ClickUp website by clicking the "Update To
+    Import Changes in individual task from ClickUp website by clicking the "Update From
     Clickup" button in the task form view.
   </li>
   <li>
@@ -164,8 +164,16 @@
     Clickup" button in the task form view.
   </li>
   <li>
+    Export a particular task to ClickUp by clicking the "Export To Clickup" button in
+    the task form view.
+  </li>
+  <li>
     Particular task can be open in clickup website by clicking "Open Task In Clickup"
     button in task form view.
+  </li>
+  <li>
+    We can import the comments and attachments of particular task by clicking "Get
+    ClickUp Comments and Attachments" button in task form view.
   </li>
 </ul>
 <p><strong>Project-Level Operations:</strong></p>
@@ -193,6 +201,10 @@
   <li>
     Particular project can be open in clickup website by clicking "Open Project In
     Clickup" button in Project form view.
+  </li>
+  <li>
+    We can import the comments and attachments of particular project by clicking "Get
+    ClickUp Comments and Attachments" button in project form view.
   </li>
 </ul>
 <p><strong>Multi-Company Functionality:</strong></p>
@@ -252,6 +264,10 @@
   <li>
     Currently the redirect uri which is set in connector clickup module must also be
     saved in Clickup Website's Clickup API app.
+  </li>
+  <li>
+    Currently by clicking on "Update From Clickup" button the "Get Clickup Comments and
+    Attachments" also excutes in project and task level.
   </li>
 </ul>
 <h2 id="changelog"><strong>Changelog</strong></h2>
