[WIP][T6268]Export checklist through backend along with tasks through boolean field

--- a/connector_clickup/connector_clickup/static/src/README.html
+++ b/connector_clickup/connector_clickup/static/src/README.html
@@ -223,6 +223,18 @@
     ClickUp Comments and Attachments" button in project form view.
   </li>
 </ul>
+<p><strong>Task Checklists:</strong></p>
+<ul>
+  <li>
+    While using projects_task_checklists module along with the current connector_clickup
+    module we can import the checklists that are created in clickup tasks.
+  </li>
+  <li>
+    We can also change the state for checklist items and can update it from odoo to
+    clickup website by clicking on the "export with checklist" in backend level while
+    exporting the tasks.
+  </li>
+</ul>
 <p><strong>Multi-Company Functionality:</strong></p>
 <ul>
   <li>
