[WIP][T6268]sync meta data functionality to get team id

--- a/connector_clickup/connector_clickup/static/src/README.html
+++ b/connector_clickup/connector_clickup/static/src/README.html
@@ -100,6 +100,10 @@
     Queue_job configuration in odoo.conf file is necessary to fulfill the worker's
     dependency.
   </li>
+  <li>
+    The space id should be provide of that team(workspace_id) which is selected in
+    backend Many2one field.
+  </li>
 </ul>
 <h2 id="features-highlights"><strong>Features &amp; Highlights</strong></h2>
 <p>
