--- a/connector_clickup/connector_clickup/static/src/README.html
+++ b/connector_clickup/connector_clickup/static/src/README.html
@@ -79,13 +79,13 @@
 <p><strong>Other Configuration:</strong></p>
 <ul>
   <li>
-    To correctly import or export the project and tasks we should select one
-    workspace(team) at the time of generation authentication code if authentication type
-    is Oauth authentication or provide one workspace id(team) if auth type is API key.
+    After "Sync Metadata" we must select one workspace(team) before starting importing
+    or exporting projects and tasks.
   </li>
   <li>
     We can import projects and tasks from more than one space(URI/Test location). At the
-    time of export if folder id is no provided it will be exported to first space id.
+    time of export if folder id is no provided in project.project it will be exported to
+    first space id.
   </li>
   <li>
     Creating different backend for workspaces(team) and location(space id) is
@@ -109,11 +109,11 @@
 <p>
   <strong>The Connector Clickup module offers the following functionalities:</strong>
 </p>
-<p><strong>Import Users/Members:</strong></p>
+<p><strong>Sync Metadata:</strong></p>
 <ul>
   <li>
-    By clicking on "Import Members" button in backend level we first import all the
-    users which is associated with clickup website.
+    By clicking on "Sync Metadata" button in backend level we first import all the
+    teams(Workspaces) detail, so that we can choose a team(workspace) in backend level.
   </li>
 </ul>
 <p><strong>Import Projects and Tasks:</strong></p>
